# scrum-poker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  create-icons.cjs  generate-icon.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
relay-server/: Dockerfile  README.md  build.bat  build.sh  docker-compose.yml  package-lock.json  package.json
relay-server/src/: server.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  credentials.rs  main.rs  relay.rs  room.rs  state.rs
web-client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-client/src/: App.tsx  index.css  types.ts
