[package]
name = "scrum-poker"
version.workspace = true
edition.workspace = true
description = "Scrum Poker Desktop Application"
default-run = "scrum-poker"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
local-ip-address = "0.6"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
directories = "5"
igd-next = { version = "0.15", features = ["aio_tokio"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
